src/test/ui/static/static-mut-foreign-requires-unsafe.stderr
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/static-mut-foreign-requires-unsafe.rs:6:5
   |
LL |     a += 3;
   |     ^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be NULL, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/static-mut-foreign-requires-unsafe.rs:7:5
   |
LL |     a = 4;
   |     ^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be NULL, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/static-mut-foreign-requires-unsafe.rs:8:14
   |
LL |     let _b = a;
   |              ^ dereference of raw pointer
   |
   = note: raw pointers may be NULL, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0133`.
